fix app-background, add storybook, fix SearchIcon, add input-text

--- a/src/app/style/vars.scss
+++ b/src/app/style/vars.scss
@@ -1,2 +1,9 @@
 :root {
+  --darth-vader: #13161d;
+  --luke-skywalker: #8c8988;
+  --hun-solo: #dcd8d3;
+
+  --font-weight-1: 400;
+  --font-weight-2: 500;
+  --font-weight-3: 600;
 }
