--- a/src/app/style/root.scss
+++ b/src/app/style/root.scss
@@ -1,4 +1,5 @@
 @import "./vars.scss";
+@import url("https://fonts.googleapis.com/css2?family=Jura:wght@400;500;600&display=swap");
 
 *,
 *::before,
@@ -17,9 +18,7 @@ body {
   background-image: url(/assets/app-background.png);
   background-size: cover;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Jura", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 1px;
