fix input-text, add input-search

--- a/src/app/style/vars.scss
+++ b/src/app/style/vars.scss
@@ -2,6 +2,7 @@
   --darth-vader: #13161d;
   --luke-skywalker: #8c8988;
   --hun-solo: #dcd8d3;
+  --chewbacca: #797675;
 
   --font-weight-1: 400;
   --font-weight-2: 500;
