--- a/src/shared/ui/input-text/input-text.module.scss
+++ b/src/shared/ui/input-text/input-text.module.scss
@@ -1,8 +1,16 @@
+.inputLayout {
+  height: 60px;
+}
+
+.relativeInputLayout {
+  position: relative;
+}
+
 .input {
   background: var(--darth-vader);
   border-radius: 16px;
   width: 100%;
-  height: 60px;
+  height: 100%;
   border: none;
   outline: none;
   padding: 0 16px;
@@ -15,4 +23,13 @@
   &:focus {
     color: var(--hun-solo);
   }
+}
+
+.inputChildren {
+  position: absolute;
+  top: 0;
+  right: 14px;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
