add button-with-icon, arrow-left-icon, arrow-right-icon

--- a/src/shared/ui/icons-stories/icon-stories.module.scss
+++ b/src/shared/ui/icons-stories/icon-stories.module.scss
@@ -15,7 +15,7 @@
   gap: 8px;
   height: 70px;
   width: 150px;
-  border: 1px dotted var(--black-10);
+  border: 1px dotted var(--luke-skywalker);
 }
 
 .iconLayout {
@@ -30,5 +30,5 @@
   width: fit-content;
   text-align: center;
   font-size: 14px;
-  color: var(--black-40);
+  color: var(--chewbacca);
 }
