--- a/src/app/style/vars.scss
+++ b/src/app/style/vars.scss
@@ -3,6 +3,9 @@
   --luke-skywalker: #8c8988;
   --hun-solo: #dcd8d3;
   --chewbacca: #797675;
+  --princess-leia: #303238;
+  --sheev-palpatine: #181b22;
+  --yoda: rgba(121, 118, 117, 0.7);
 
   --font-weight-1: 400;
   --font-weight-2: 500;
