--- a/src/app/style/vars.scss
+++ b/src/app/style/vars.scss
@@ -6,8 +6,13 @@
   --princess-leia: #303238;
   --sheev-palpatine: #181b22;
   --yoda: rgba(121, 118, 117, 0.7);
+  --obi-wan-kenobi: rgba(30, 32, 39, 0.7);
+  --r2-d2: rgba(207, 123, 90, 0.2);
 
   --font-weight-1: 400;
   --font-weight-2: 500;
   --font-weight-3: 600;
+  --font-weight-4: 700;
+
+  --font-size-small: 14px;
 }
