--- a/src/shared/ui/icons-stories/icon-stories.module.scss
+++ b/src/shared/ui/icons-stories/icon-stories.module.scss
@@ -29,6 +29,6 @@
 .iconName {
   width: fit-content;
   text-align: center;
-  font-size: 14px;
+  font-size: var(--font-size-small);
   color: var(--chewbacca);
 }
