--- a/src/shared/ui/users-list-layout/users-list-layout.module.scss
+++ b/src/shared/ui/users-list-layout/users-list-layout.module.scss
@@ -1,7 +1,7 @@
 .usersListLayout {
   display: flex;
-  background-color: rgba(30, 32, 39, 0.7);
-  border: 1px solid rgba(207, 123, 90, 0.2);
+  background-color: var(--obi-wan-kenobi);
+  border: 1px solid var(--r2-d2);
   border-radius: 40px;
   width: 100%;
   height: 100%;
