--- a/src/app/style/vars.scss
+++ b/src/app/style/vars.scss
@@ -8,6 +8,11 @@
   --yoda: rgba(121, 118, 117, 0.7);
   --obi-wan-kenobi: rgba(30, 32, 39, 0.7);
   --r2-d2: rgba(207, 123, 90, 0.2);
+  --rey: rgba(32, 33, 40, 0.5);
+  --c-3po: rgba(207, 123, 90, 0.1);
+  --kylo-ren: rgba(207, 123, 90, 0.24);
+  --bb-8: rgba(207, 123, 90, 0.5);
+  --qui-gon-jinn: #cf7b5a;
 
   --font-weight-1: 400;
   --font-weight-2: 500;
