fix user-table-row, add user-table-head, add user-table-list

--- a/src/shared/ui/dropdown/dropdown.module.scss
+++ b/src/shared/ui/dropdown/dropdown.module.scss
@@ -7,7 +7,7 @@
   border-radius: 16px;
   padding: 8px;
   max-height: 256px;
-  overflow-y: scroll;
+  overflow-y: auto;
   width: max-content;
 
   &::-webkit-scrollbar {
