--- a/src/shared/ui/select-number-pages/select-number-pages.module.scss
+++ b/src/shared/ui/select-number-pages/select-number-pages.module.scss
@@ -4,3 +4,8 @@
   font-size: var(--font-size-small);
   margin-right: 16px;
 }
+
+.selectNumberPagesLayout {
+  display: flex;
+  align-items: center;
+}
